# kafka-plant-server

./: README.md  pyproject.toml
Client/: ReadFromMQTT.py
General/: SignalHandler.py
MoistureMeasurement/: MoistureMeasurement.ino
Server/: MessageProcessor.py
Server/MoistureMeasurement/: MoistureMeasurement.ino
Server/certs/: ca.crt  ca.key  ca.srl  server.crt  server.csr  server.key
Server/mqtt_setup/: custom.conf
Site/plant-data/: package-lock.json  package.json
Site/plant-data/src/: App.tsx  index.tsx  model.ts
Site/plant-data/src/components/: DataDisplay.tsx
